@@ -18,6 +18,7 @@
 <script src="{% static 'wagtailadmin/js/modal-workflow.js' %}"></script>
 <script src="{% static 'wagtailadmin/js/page-editor.js' %}"></script>
 <script src="{% static 'wagtailadmin/js/page-chooser.js' %}"></script>
+<script src="{% static 'admin/js/vendor/xregexp/xregexp.min.js' %}"></script>
 <script src="{% static 'admin/js/urlify.js' %}"></script>
 <script src="{% static 'wagtailadmin/js/privacy-switch.js' %}"></script>
 <script src="{% static 'wagtailadmin/js/vendor/bootstrap-tooltip.js' %}"></script>
